--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">7MinuteWorkout</string>
     <string name="image_view">image view</string>
     <string name="image">image</string>
+    <string name="start">start</string>
 </resources>
