--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="image_view">image view</string>
     <string name="image">image</string>
     <string name="start">start</string>
+    <string name="get_ready_for">GET READY FOR</string>
+    <string name="_10">10</string>
 </resources>
