--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="_10">10</string>
     <string name="_30sp">30sp</string>
     <string name="exercise_name">Exercise Name</string>
+    <string name="upcoming_exercise_is">Upcoming exercise is..</string>
+    <string name="jumping_jack">Jumping Jack</string>
 </resources>
