--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="congratulations">Congratulations!</string>
     <string name="you_have_finished_the_workout">You have finished the workout!</string>
     <string name="finish">FINISH</string>
+    <string name="are_you_sure">Are you sure?</string>
+    <string name="yes">yes</string>
+    <string name="bmi">BMI</string>
+    <string name="calculator">Calculator</string>
 </resources>
