--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,11 @@
     <string name="yes">yes</string>
     <string name="bmi">BMI</string>
     <string name="calculator">Calculator</string>
+    <string name="weight_in_kg">WEIGHT (in kg)</string>
+    <string name="height_in_cm">HEIGHT (in cm)</string>
+    <string name="your_bmi">YOUR BMI</string>
+    <string name="normal">Normal</string>
+    <string name="calculate">CALCULATE</string>
+    <string name="_15_00">15.00</string>
+    <string name="condition">Condition</string>
 </resources>
