--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="calculate">CALCULATE</string>
     <string name="_15_00">15.00</string>
     <string name="condition">Condition</string>
+    <string name="feet">feet</string>
+    <string name="history_image">history_image</string>
 </resources>
