--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="take_first_steps_towards_your_fitness_journey">Take first step towards your fitness journey..</string>
     <string name="sign_in">SIGN IN</string>
     <string name="sign_up">SIGN UP</string>
+    <string name="please_wait">Please wait..</string>
 </resources>
